--- a/contactUs.html
+++ b/contactUs.html
@@ -234,7 +234,7 @@ h1 {
                 like-minded peers.
             </p>
             <div class="social-icons">
-                <a href="https://www.instagram.com/codesocial.tech/" target="_blank"><img src="./images/instagram.png"
+                <a href="https://www.instagram.com/codesocial.tech/" target="_blank"><img src="./images/instagram-icon.png"
                         alt="Instagram"></a>
                 <a href="https://discord.gg/MSTNyRSPYW" target="_blank"><img src="./images/discord-icon.png"
                         alt="Discord"></a>
