--- a/learning.html
+++ b/learning.html
@@ -398,7 +398,7 @@ animateCircles();
           </p>
           <div class="social-icons">
             <a href="https://www.instagram.com/codesocial.tech/" target="_blank"
-              ><img src="./images/instagram.png" alt="Instagram"
+              ><img src="./images/instagram-icon.png" alt="Instagram"
             /></a>
             <a href="https://discord.gg/MSTNyRSPYW" target="_blank"
               ><img src="./images/discord-icon.png" alt="Discord"
