--- a/Resources.html
+++ b/Resources.html
@@ -220,7 +220,7 @@
           Code Social Community is a vibrant and inclusive space for tech enthusiasts <br> to learn, grow, and connect. Founded in 2023, our mission is to empower individuals <br> with resources, mentorship, and opportunities to cultivate their skills, explore their interests, and <br>collaborate with like-minded peers.
         </p>
         <div class="social-icons">
-          <a href="https://www.instagram.com/codesocial.tech/" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+          <a href="https://www.instagram.com/codesocial.tech/" target="_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
           <a href="https://discord.gg/MSTNyRSPYW" target="_blank"><img src="images/discord-icon.png" alt="Discord"></a>
           <a href="https://www.linkedin.com/company/code-social/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
         </div>
