removed repeated css in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
        pointer-events: none; /* Disable interaction */
        }
     </style>
-    <style>
+    <!-- <style>
         html {
             scroll-behavior: smooth;
         }
@@ -120,7 +120,7 @@
             transition: width 0.09s ease-in-out;
             border-radius: 10px;
         }
-    </style>
+    </style> -->
     <style>
         html {
             scroll-behavior: smooth;
