--- a/index.html
+++ b/index.html
@@ -509,6 +509,7 @@
                         <li><a href="#">Contact Us</a></li>
                         <li><a href="#">Volunteer Opportunities</a></li>
                         <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="sitemap.html">Site Map</a></li>
                     </ul>
                 </div>
             </div>
