--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 </ul>
             </li>
             <li class="community">
-                <a href="maintenance.html">Join Our Community</a>
+                <a href="join_community.html">Join Our Community</a>
                 <ul class="dropdown">
                     <li><a href="maintenance.html">WhatsApp</a></li>
                     <li><a href="maintenance.html">Discord</a></li>
