update about us page

--- a/register.html
+++ b/register.html
@@ -151,7 +151,7 @@
           <li><a href="blog.html">Blogs</a></li>
           <li><a href="community.html">Join Our Community</a></li>
           <li><a href="learning.html">Learning</a></li>
-          <li><a href="about.html">About Us</a></li>
+          <li><a href="about.html">About-Us</a></li>
         </ul>
       </nav>
     </header>
