ui changes in the Home page

--- a/index.html
+++ b/index.html
@@ -482,16 +482,7 @@
                     opportunities to cultivate their skills, explore their interests, and <br>collaborate with
                     like-minded peers.
                 </p>
-                <div class="social-icons">
-                    <a href="https://wa.me/your-whatsapp-number" target="_blank"><img src="./images/whatsapp-icon.png"
-                            alt="WhatsApp"></a>
-                    <a href="https://discord.gg/MSTNyRSPYW" target="_blank"><img src="./images/discord-icon.png"
-                            alt="Discord"></a>
-                    <a href="https://www.linkedin.com/company/code-social/" target="_blank"><img
-                            src="./images/linkedin-icon.png" alt="LinkedIn"></a>
-                </div>
             </div>
-
             <!-- Links Section -->
             <div class="footer-links">
                 <div class="footer-column">
@@ -513,7 +504,15 @@
                 </div>
             </div>
         </div>
-
+        <!-- connections -->
+        <div class="social-icons">
+            <a href="https://wa.me/your-whatsapp-number" target="_blank"><img src="./images/whatsapp-icon.png"
+                    alt="WhatsApp"></a>
+            <a href="https://discord.gg/MSTNyRSPYW" target="_blank"><img src="./images/discord-icon.png"
+                    alt="Discord"></a>
+            <a href="https://www.linkedin.com/company/code-social/" target="_blank"><img
+                    src="./images/linkedin-icon.png" alt="LinkedIn"></a>
+        </div>
         <!-- Footer Bottom -->
         <hr class="footer-divider">
         <p class="footer-bottom-text">© Copyright 2024, All Rights Reserved by Code Social</p>
