Made the necessary changes

--- a/index.html
+++ b/index.html
@@ -504,20 +504,8 @@
                 </ul>
             </div>
         </div>
-
-        <!-- Newsletter Section -->
-        <div class="footer-newsletter-container">
-            <div class="footer-newsletter animated-newsletter">
-                <p class="footer-title">Stay Updated</p>
-                <br>
-                <p class="newsletter-text">Subscribe to our newsletter for the latest updates and community news.</p>
-                <br>
-                <form class="newsletter-form">
-                    <input type="email" class="newsletter-input" placeholder="Your Email Address" required>
-                    <button type="submit" class="newsletter-btn">Subscribe</button>
-                </form>
-            </div>
-            
+        <div>
+        <p class="footer-title">Connect With Us</p>
             <div class="social-icons">
                 <a href="https://wa.me/your-whatsapp-number" target="_blank" class="social-icon-link">
                     <img src="./images/whatsapp-icon.png" alt="WhatsApp" class="social-icon">
@@ -532,8 +520,8 @@
                     <img src="./images/gitHub.png" alt="GitHub" class="social-icon">
                 </a>
             </div>
-        </div>        
-    </div>
+        </div>      
+        </div>
 
     <!-- Footer Bottom -->
     <hr class="footer-divider">
