--- a/index.html
+++ b/index.html
@@ -385,11 +385,8 @@
                     <li><a href="mentorship.html">Meet Our Team</a></li>
                     <li><a href="./JoinTeam.html">Join Our Team</a></li>
                     <li><a href="contactUs.html">Contact Us</a></li>
+                    <li><a href="maintenance.html">Follow Us</a></li>
                 </ul>
-            </li>
-
-            <li>
-                <a href="maintenance.html">Follow Us</a>
             </li>
             <!-- Dark Mode Toggle -->
             <button id="theme-toggle" class="theme-toggle-btn">
